[Feat/#290] :sparkles: Feat: 플레이어 점수 반환하는 API 구현